--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -4,3 +4,5 @@ $color-foreground-light: #FFFFFF;
 $color-foreground-dark: #626262;
 
 $shadow-primary: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
+
+$transition-factor: 0.1s;
