--- a/src/shared/ActionBar.scss
+++ b/src/shared/ActionBar.scss
@@ -2,60 +2,23 @@
 
 .ActionBar {
     display: flex;
-    align-items: flex-end;
-    position: absolute;
-    bottom: 0;
-    left: 50%;
-    transform: translate(-50%, 0);
+    background-color: $color-secondary;
+    padding: 2px 5px;
+    border-radius: 100px;
+    margin-right: 30px;
 
-    &__central {
-        background-color: $color-primary;
-        border-radius: 40px 40px 0 0;
-        padding: 32px 22px;
+    &__icon {
+        fill: $color-foreground-dark;
+        width: 27px;
+        height: 27px;
+        padding: 9px;
+        margin: 0 6px;
+        border-radius: 100px;
         transition-duration: $transition-factor * 2;
 
         &:hover {
-            background-color: darken($color-primary, 10%);
             cursor: pointer;
-        }
-    }
-
-    &__side {
-        background-color: $color-secondary;
-        display: flex;
-        align-items: center;
-        padding: 5px 5px 0 5px;
-
-        &--left {
-            border-radius: 30px 0 0 0;
-        }
-
-        &--right {
-            border-radius: 0 30px 0 0;
-        }
-    }
-
-    &__icon {
-        border-radius: 40px 40px 0 0;
-        width: 30px;
-        height: 30px;
-        fill: $color-foreground-dark;
-
-        &--central {
-            fill: $color-foreground-light;
-            width: 40px;
-            height: 40px;
-        }
-
-        &--side {
-            padding: 17px;
-            margin: 0 2px;
-            transition-duration: $transition-factor * 2;
-
-            &:hover {
-                background-color: rgba(0, 0, 0, 0.1);
-                cursor: pointer;
-            }
+            background-color: rgba(0, 0, 0, 0.1);
         }
     }
 }
