[shared] add UploadBar component

--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -1,4 +1,14 @@
 @font-face {
-    font-family: 'Nunito';
+    font-family: 'Nunito ExtraLight';
     src: url('/../public/fonts/Nunito-ExtraLight.ttf');
+}
+
+@font-face {
+    font-family: 'Nunito Light';
+    src: url('/../public/fonts/Nunito-Light.ttf');
+}
+
+@font-face {
+    font-family: 'Nunito Medium';
+    src: url('/../public/fonts/Nunito-Medium.ttf');
 }
