--- a/src/styles/_reset.scss
+++ b/src/styles/_reset.scss
@@ -25,7 +25,7 @@ time, mark, audio, video {
     font-size: 100%;
     vertical-align: baseline;
     background: transparent;
-    font-family: 'Nunito';
+    font-family: 'Nunito ExtraLight';
 }
 
 body {
