--- a/src/shared/FileList.scss
+++ b/src/shared/FileList.scss
@@ -4,6 +4,7 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
+    margin: 30px 0;
 
     &__inner {
         width: 90%;
