[pages] implement signin page

--- a/src/styles/_reset.scss
+++ b/src/styles/_reset.scss
@@ -57,6 +57,8 @@ a {
     font-size: 100%;
     vertical-align: baseline;
     background: transparent;
+    color: $color-primary;
+    text-decoration: none;
 }
 
 /* change colours to suit your needs */
