--- a/src/styles/_reset.scss
+++ b/src/styles/_reset.scss
@@ -107,6 +107,6 @@ input, select {
 input, select, textarea, button {
     font-family: 'Nunito Light';
     &:focus {
-        outline-color: $color-primary;
+        outline: none;
     }
 }
