--- a/src/shared/Form.scss
+++ b/src/shared/Form.scss
@@ -4,7 +4,11 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: 80px 0;
+    margin: 10px 0;
+
+    &--section {
+        margin: 80px 0;
+    }
 
     &__title {
         font-size: 2em;
