--- a/src/shared/ActionBar.scss
+++ b/src/shared/ActionBar.scss
@@ -5,7 +5,6 @@
     background-color: $color-secondary;
     padding: 2px 5px;
     border-radius: 100px;
-    margin-right: 30px;
 
     &__icon {
         fill: $color-foreground-dark;
@@ -15,10 +14,28 @@
         margin: 0 6px;
         border-radius: 100px;
         transition-duration: $transition-factor * 2;
+    }
 
+    &:not(.ActionBar--disabled) .ActionBar__icon {
         &:hover {
             cursor: pointer;
             background-color: rgba(0, 0, 0, 0.1);
+        }
+    }
+}
+
+@media (max-width: 350px) {
+    .ActionBar {
+        flex-direction: column;
+        position: fixed;
+        right: 0;
+        top: 50%;
+        transform: translate(0, -50%);
+        padding: 10px 0 10px 5px;
+        border-radius: 40px 0 0 40px;
+
+        &__icon {
+            margin: 0;
         }
     }
 }
