--- a/src/shared/Dialog.scss
+++ b/src/shared/Dialog.scss
@@ -19,3 +19,19 @@
         opacity: 0;
     }
 }
+
+@media (max-width: 600px) {
+    .Dialog {
+        padding: 8px 20px 0 20px;
+
+        .Form {
+            &__title {
+                font-size: 1.6em;
+            }
+
+            .FormInput {
+                min-width: initial;
+            }
+        }
+    }
+}
